--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-component": "^2.8.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.1",
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
